k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ideas-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: ideas.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ideas-frontend
                port:
                  number: 80
